--- a/styles.html
+++ b/styles.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
-<html>
 <head>
 <title> Nettisivun otsikko</title>
 <meta charset="utf-8" />
 <link rel="stylesheet" href="styles.css">
-<div>
-
 </head>
 <body>
+  <div>
 
-  
-  <br>
     <h1> KAUPPALISTA MINULLE </h1>
     <p> mitä tarvitsemme kaupasta on paljon asioita </p>
     <ol>
@@ -20,12 +16,8 @@
 
 <ul style="list-style-type:disc;">
   <li>SUKKIA</li>
-  <li>KOIRANRUOKA</li></p>
+  <li>KOIRANRUOKA</li>
 </ul>
-</p>
-</br>
-
-
-</body>
 </div>
+</body>
 </html>
