--- a/second.html
+++ b/second.html
@@ -2,7 +2,16 @@
 <html>
 <head>
 <title> Toinen harjoitus</title>
+  <a href="https://github.com/jasminkeinonen/pikkuprokkis/blob/a36c85c1a2c8cdc6befbb5d9bb104abcacdd3f1a/index.html/"</a>
   
+  <h> Toisen harjoituksen hieno otsikko  </h>
+  <p> Tässä toisessa harjoituksessa harjoitellaan muun muassa kuvan liittämistä nettisivuille. </p>
+  </head>
+  <body>
+   <p> Tähän tulee lisää tekstiä, jotta saamme lisää rakennetta
+     tähän harjoitukseen. :-) </p>
+    
+  </body>
   
   
   
