--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<title> otsikko</title>
+<title> Nettisivujen otsikko</title>
+ <a href="https://github.com/jasminkeinonen/pikkuprokkis/blob/935e093171090c2039d284e367f6cd1a01ba086d/second.html"</a> 
+  
 </head>
+  
 
 
 <body>
