--- a/second.html
+++ b/second.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title> Toinen harjoitus</title>
+<a href="index.html">Linkki indexiin</a>
 <link rel="stylesheet" href="second.css">
   
   <h1> Koirakuvien liittämistä</h1>
