--- a/second.html
+++ b/second.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>
 <title> Toinen harjoitus</title>
-<a href="index.html">Linkki indexiin</a>
+<a href="index.html" >Linkki indexiin</a>
 <link rel="stylesheet" href="second.css">
   
   <h1> Koirakuvien liittämistä</h1>
-  <p1> Tässä toisessa harjoituksessa harjoitellaan muun muassa kuvienn liittämistä nettisivuille. </p1>
-  <a href="https://github.com/jasminkeinonen/pikkuprokkis/blob/a36c85c1a2c8cdc6befbb5d9bb104abcacdd3f1a/index.html/"</a></a>
-</head>
-  <body>
+  <p> Tässä toisessa harjoituksessa harjoitellaan muun muassa kuvienn liittämistä nettisivuille. </p>
+
+
    <p> Tähän tulee lisää tekstiä, jotta saamme lisää rakennetta
      tähän harjoitukseen. :-) 
     Seuraavana vuorossa kuvien liittämisen harjoittelua.</p>
-
    <img src="https://cdn.pixabay.com/photo/2022/02/01/20/20/animal-6987017_960_720.jpg" alt="Söpö koiru" class="center">
     <figure>
     <img src="https://cdn.pixabay.com/photo/2020/10/11/06/49/dog-5644896_960_720.jpg"
@@ -22,10 +19,7 @@
 </figure>
     
 <h2>Kuinka söpöjä nämä kuvat ovat?</h2>
-
 <label for="file">Sanoisinko, että:</label>
 <progress id="file" value="95" max="100"> 95% </progress>
-<p1>95% söpöjä</p1>
-
-</body>
+<p>95% söpöjä</p>
 </html>
