--- a/layout.html
+++ b/layout.html
@@ -20,6 +20,16 @@
     <img src="milo.jpg" alt="Milon kuva">  
   </section>
   
+  <article>
+    <h3> Seuraavaksi asioita joista Milo pitää: </h3>
+    <ul style="list-style-type:disc;">
+  <li>palloista, Milo voisi noutaa palloa vaikka koko päivän</li>
+  <li>Herkuista mm. kurkku on ihan ykkösjuttu</li>
+</ul>
+    
+    
+  </article>
+  
   
 
 </html>
