--- a/layout.html
+++ b/layout.html
@@ -1,35 +1,41 @@
 <!DOCTYPE html>
-<html>
 <head>
-<meta charset="utf-8" />
-<title> Nettisivujen otsikko</title>
+<title>Milon kotisivut</title>
+<meta charset="utf-8">
+<link rel="stylesheet" href="layout.css">
 </head>
 
-<header>
-<h1>Milokettis kotisivut</h1>
-</header>
-
+<body>
+<div class="header"><h1>Milon omat kotisivut</h1></div>
+<div>
 <nav>
   <a href="index.html">Linkki indexiin</a>
   <a href="second.html">Linkki toiseen</a>
 </nav>
-  
+ 
   <section>
-    <h2> Nämä ovat kettispoju Milon nettisivut </h2>
-    <p> Milo on 3-vuotias kettuterrieripoju. </p>
-    <img src="milo.jpg" alt="Milon kuva">  
-  </section>
-  
-  <article>
     <h3> Seuraavaksi asioita joista Milo pitää: </h3>
     <ul style="list-style-type:disc;">
   <li>palloista, Milo voisi noutaa palloa vaikka koko päivän</li>
   <li>Herkuista mm. kurkku on ihan ykkösjuttu</li>
 </ul>
-    
-    
-  </article>
-  
-  
+<img src="https://images.pexels.com/photos/1839753/pexels-photo-1839753.jpeg?cs=srgb&dl=pexels-kristina-paukshtite-1839753.jpg&fm=jpg" alt="Söpö koiru" class="center">
 
+</section>
+
+  <aside>
+      <h3>Milon lempiruokia:</h3>
+<ul style="list-style-type:disc;">
+    <li>kurkku</li>
+    <li>lihapulla</li>
+</ul>
+<img src="https://images.pexels.com/photos/933498/pexels-photo-933498.jpeg?cs=srgb&dl=pexels-kasuma-933498.jpg&fm=jpg" alt="Söpö koiru" class="center">
+
+  </aside>
+
+<footer>
+      Kiitokset, kun kävit meidän kotisivuilla!
+  </footer>
+</div>
+</body>
 </html>
