--- a/third.html
+++ b/third.html
@@ -4,100 +4,35 @@
 <title>Kolmas nettisivu</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-* {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-/* Style the header */
-header {
-  background-color: #666;
-  padding: 30px;
-  text-align: center;
-  font-size: 35px;
-  color: white;
-}
-
-/* Create two columns/boxes that floats next to each other */
-nav {
-  float: left;
-  width: 30%;
-  height: 300px; /* only for demonstration, should be removed */
-  background: #ccc;
-  padding: 20px;
-}
-
-/* Style the list inside the menu */
-nav ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-article {
-  float: left;
-  padding: 20px;
-  width: 70%;
-  background-color: #f1f1f1;
-  height: 300px; /* only for demonstration, should be removed */
-}
-
-/* Clear floats after the columns */
-section::after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Style the footer */
-footer {
-  background-color: #777;
-  padding: 10px;
-  text-align: center;
-  color: white;
-}
-
-/* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
-@media (max-width: 600px) {
-  nav, article {
-    width: 100%;
-    height: auto;
-  }
-}
-</style>
+<link rel="stylesheet" href="third.css">
 </head>
 <body>
 
-<h2>Kolmannen nettisivun ulkoasu</h2>
-<p> Tässä on tekstiä tähän kontenttiin</p>
-<p>Resize the browser window to see the responsive effect (you will learn more about this in our next chapter - HTML Responsive.)</p>
-
 <header>
-  <h2>Linkkejä</h2>
+  <h1>Kolmas kotisivu & ulkoasu</h1>
 </header>
+<div id=”navbar”><a href="third.html" target="_blank">Home</a> </div>
 
 <section>
   <nav>
     <ul>
-      <li><a href="#">London</a></li>
-      <li><a href="#">Paris</a></li>
-      <li><a href="#">Tokyo</a></li>
+      <li><a href="https://www.instagram.com/milokettis/" target="_blank">Milo</a></li>
+      <li><a href="https://www.youtube.com" target="_blank">Youtube</a></li>
+      <li><a href="https://www.facebook.com" target="_blank">Facebook</a></li>
     </ul>
   </nav>
   
   <article>
-    <h1>London</h1>
-    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
-    <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
+    <h2>Milo the kettuterrieri</h2>
+    <p>Milo on 3-vuotias sileäkarvainen kettuterrieripoika.</p>
+    <p>Milo pitää pitkistä lenkeistä, pallon heittelystä ja päikkäreistä.</p>
+    <img src="milo.jpg"
+         alt="Milon potretti">
   </article>
 </section>
 
 <footer>
-  <p>Footer</p>
+  <p>Yhteystiedot: @milokettis: DM me at instagram!</p>
 </footer>
-
 </body>
 </html>
